--- a/programa avanzada/src/Visual/MenuPrincipal.form
+++ b/programa avanzada/src/Visual/MenuPrincipal.form
@@ -43,6 +43,7 @@
       <Properties>
         <Property name="closable" type="boolean" value="true"/>
         <Property name="resizable" type="boolean" value="true"/>
+        <Property name="title" type="java.lang.String" value="GuaraSoft S.R.L."/>
         <Property name="visible" type="boolean" value="true"/>
       </Properties>
 
@@ -72,7 +73,7 @@
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <EmptySpace min="0" pref="715" max="32767" attributes="0"/>
+                  <EmptySpace min="0" pref="723" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
           </Layout>
